# skybridge

./: .gitattributes  .gitignore  CAPTION_FIX_EXPLANATION.md  CO_LOCATED_STORAGE_ANALYSIS.md  aliyun_caption_result_cap_aliyun_flash_ea_20260209_174921.json  aliyun_caption_result_cap_aliyun_flash_wu_20260209_175028.json  aliyun_caption_result_cap_aliyun_plus_ea_20260209_174853.json  aliyun_caption_result_cap_aliyun_plus_wu_20260209_175002.json  aliyun_caption_summary_20260209_175028.json  azure_vi_result_rtheiymihs.json  config.py  llm_test_summary_20260210_141103.json  llm_test_summary_20260210_142710.json  llm_test_summary_20260210_145451.json  main.py  requirements.txt  test.py
pro/: .gitignore  README.md  pyproject.toml
pro/cloud/split_sample/: Dockerfile  README.md  aliyun-fc.yaml  app.py  aws-lambda.Dockerfile  lambda_function.py
pro/configs/: buckets.json  deployed_split_sample.json  planner.mock.json  prototype.cloud.example.json  prototype.hybrid.split_sample.json  prototype.mock.json
pro/experiments/activitynet_splits/: activitynet_video_random_splits_seed20260622.csv  activitynet_video_random_splits_seed20260622.json  (+12 more)
pro/samples/: demo_video.txt
pro/scripts/: build_split_sample_inputs.py  measure_bucket_network_scenarios.py  measure_split_sample_network.py  measure_video_transfer_network.py  profile_shot_detection.py  profile_split_sample.py  recover_shot_detection_timing.py  replicate_profile_videos.sh  setup_aws_shot_detection_events.py  upload_profile_videos.sh  upload_profile_videos_all.sh
pro/tests/: test_optimizer.py  test_workflow.py
(+2594 files in other folders)
